# ProyetoFinalDevops

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy.yml
app/: Dockerfile
prometheus/: prometheus.yml
